Finish Swagger docs.
