# app/controllers/shared.js
@@ -10,6 +10,23 @@ module.exports = function (app) {
 
   router.use(log);
 
+  /**
+   * @swagger
+   * /shared/{id}:
+   *    get:
+   *      summary: Get details about a shared collection including all links
+   *      tags:
+   *        - collection
+   *      parameters:
+   *        - $ref: '#/parameters/collectionId'
+   *      produces:
+   *        - application/json
+   *      responses:
+   *          200:
+   *            description: Details about the requested collection
+   *            schema:
+   *              $ref: '#/definitions/CollectionDetails'
+   */
   router.get('/:id', function (req, res) {
     var _id = req.params.id;
     if (!_id) return res.makeError(404, 'Not found. Please give an id.');
